syntax = "proto3";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
  rpc CreateBlogForUser(CreateBlogForUserRequest) returns (BlogResponse) {}
}

message GetUserRequest {
  string userId = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
}

message UpdateUserRequest {
  string userId = 1;
  string username = 2;
  string email = 3;
}

message DeleteUserRequest {
  string userId = 1;
}

message CreateBlogForUserRequest {
  string userId = 1;
  string title = 2;
  string content = 3;
}

message BlogResponse {
  string blogId = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
}

message UserResponse {
  string userId = 1;
  string username = 2;
  string email = 3;
}
